log/build_2020-08-07_17-09-20/main/stdout_stderr 2.log
Scanning dependencies of target main
[ 40%] Building CXX object CMakeFiles/main.dir/src/game.cpp.o
[ 40%] Building CXX object CMakeFiles/main.dir/src/main.cpp.o
[ 60%] Building CXX object CMakeFiles/main.dir/src/goalie.cpp.o
/Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.cpp:8:15: error: use of undeclared identifier 'Calc'
        float degree=Calc::degree_atan2(ball.pose,robot.pose)-robot.pose.theta;
                     ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.cpp:9:23: error: use of undeclared identifier 'Calc'
        float TH_goal_degree=Calc::degree_atan2(goal.their,robot.pose);
                             ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp:31:16: warning: unused variable 'field_width' [-Wunused-variable]
         float field_width = geometry_message->field_width;
               ^
2 errors generated.
make[2]: *** [CMakeFiles/main.dir/src/goalie.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
1 warning generated.
make[1]: *** [CMakeFiles/main.dir/all] Error 2
make: *** [all] Error 2
